--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,10 @@ project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 14)
 
-cmake_minimum_required(VERSION 3.16)
-
 # 遍历项目根目录下所有的 .cpp 文件
 file (GLOB files *.cpp)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable (${exe} ${file})
+    add_executable (${exe} ${file} twoSum_1_easy.cpp)
     message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
 endforeach ()
